# pds-migration

./: .gitignore  Cargo.toml  Dockerfile  HoppscotchCollection.json  LICENSE  README.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  main.yml  release.yml
pdsmigration-common/: Cargo.toml
pdsmigration-common/src/: activate_account.rs  agent.rs  create_account.rs  deactivate_account.rs  error_code.rs  errors.rs  export_all_blobs.rs  export_blobs.rs  export_pds.rs  import_pds.rs  lib.rs  migrate_plc.rs  migrate_preferences.rs  missing_blobs.rs  request_token.rs  service_auth.rs  upload_blobs.rs
pdsmigration-common/src/agent/: account.rs  auth.rs  blobs.rs  identity.rs  mod.rs  preferences.rs  repo.rs  types.rs
pdsmigration-gui/: Cargo.toml  README.md  flake.nix  index.html
pdsmigration-gui/src/: agent.rs  app.rs  create_account_page.rs  error_window.rs  errors.rs  existing_pds_page.rs  home_page.rs  ipld.rs  lib.rs  log_viewer.rs  main.rs  new_pds_page.rs  session_config.rs  styles.rs  success_window.rs
pdsmigration-gui/src/screens/: advanced_home.rs  basic_home.rs  create_account.rs  create_or_login_account.rs  deactivate_and_activate.rs  does_pds_exist.rs  edit_plc.rs  export_blobs.rs  export_repo.rs  import_blobs.rs  import_repo.rs  migrate_plc.rs  migrate_preferences.rs  migrate_without_pds.rs  mod.rs  new_login.rs  old_login.rs  success.rs
pdsmigration-gui/src/session/: mod.rs  session_config.rs
pdsmigration-web/: Cargo.toml
pdsmigration-web/src/: background_jobs.rs  config.rs  error_code.rs  errors.rs  lib.rs  main.rs  openapi.rs
pdsmigration-web/src/api/: activate_account.rs  create_account.rs  deactivate_account.rs  export_blobs.rs  export_blobs_ws.rs  export_repo.rs  health.rs  import_repo.rs  jobs.rs  migrate_plc.rs  migrate_preferences.rs  missing_blobs.rs  mod.rs  request_token.rs  service_auth.rs  upload_blobs.rs
pdsmigration-web/src/middleware/: auth_token.rs  mod.rs  rate_limit.rs
pdsmigration-web/tests/: integration_tests.rs
src/: agent.rs  error_code.rs  main.rs
