[package]
name = "PdsMigration"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
actix-rt = "2.10.0"
actix-web = "4.8.0"
env_logger = "0.11.4"
serde = { version = "1.0.204", features = ["derive"] }
bsky-sdk = "0.1.16"
ipld-core = "0.4.1"
derive_more = { version = "1.0.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.134"
reqwest = "0.12.12"
aws-config = { version = "1.5.14", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.70.0"