[package]
name = "pdsmigration-common"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"
publish = true
repository = "https://github.com/NorthskySocial/pds-migration"
description = "Common framework for PDS Migration"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
bsky-sdk = "0.1.16"
ipld-core = "0.4.1"
tracing = "0.1.41"
serde_json = "1.0.134"
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["fs"] }
derive_more = { version = "2.0.1" ,features = ["display",  "error"]}
