[package]
name = "pdsmigration-gui"
version = "0.2.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
pdsmigration-common = { workspace = true }
bsky-sdk = "0.1.16"
egui = { version = "0.31.0" }
eframe = { version = "0.31", features = ["glow", "wgpu"] }
derive_more = "2.0.1"
atrium-xrpc = "0.12.1"
zip = "4.1.0"
secp256k1 = { version = "0.31.0", features = ["rand"] }
multibase = "0.9.1"
unsigned-varint = "0.8.0"
rand = "0.9.1"
env_logger = "0.11.8"
tokio = { version = "1.43.1", features = ["rt-multi-thread", "time"] }