[package]
name = "pdsmigration-gui"
version = "0.2.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
pdsmigration-common = { workspace = true }
bsky-sdk = "0.1.20"
egui = { version = "0.29.0" }
eframe = { version = "0.29", features = ["glow", "wgpu"] }
derive_more = "2.0.1"
atrium-xrpc = "0.12.3"
zip = "4.1.0"
secp256k1 = { version = "0.31.0", features = ["rand"] }
multibase = "0.9.1"
unsigned-varint = "0.8.0"
rand = "0.9.1"
egui_tracing = "0.2.6"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
egui_extras = { version = "0.29.0", features = ["default", "image"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
tokio = { version = "1.43.1", features = ["rt-multi-thread", "time"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
tokio = { version = "1.43.1", features = ["rt", "time"] }
