[package]
name = "pdsmigration-web"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"

[dependencies]
dotenvy = "0.15.7"
actix-rt = "2.10.0"
actix-web = "4.8.0"
env_logger = "0.11.4"
pdsmigration-common = {workspace = true}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
aws-config = { version = "1.5.14", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.70.0"
