[package]
name = "pdsmigration-web"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"

[dependencies]
dotenvy = "0.15.7"
actix-rt = "2.10.0"
actix-web = "4.8.0"
tracing-actix-web = "0.7.19"
pdsmigration-common = {workspace = true}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-config = { version = "1.5.14", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.70.0"
serde = { version = "1.0.218", features = ["derive"] }
prometheus = "0.14.0"
actix-web-prom = "0.10.0"
derive_more = { version = "2.0.1" }

[dev-dependencies]
actix-web = { version = "4.8.0", features = ["macros"] }
actix-rt = "2.10.0"
pretty_assertions = "1.4.1"
